# J.A.R.I.V.S

./: .env.example  .gitignore  README.md  audio.py  logging_config.py  pyproject.toml  requirements.txt  service.py
config/: config.yaml
notebooks/: automatic_model_training.ipynb  train_wake_phrase.ipynb
src/jarvis/: __init__.py  actions.py  config.py  main.py  orchestrator.py  service.py
src/jarvis/execution/: __init__.py  executor.py  web_answers.py
src/jarvis/intent/: __init__.py  fast_path.py  parser.py
src/jarvis/safety/: __init__.py  gate.py
src/jarvis/stt/: __init__.py  capture.py  transcriber.py
src/jarvis/tts/: __init__.py  speaker.py
src/jarvis/ui/: __init__.py  events.py  log_stream.py  server.py
src/jarvis/ui/static/: index.html
src/jarvis/utils/: __init__.py  audio.py
src/jarvis/wake_word/: __init__.py  listener.py
tests/: test_audio.py  test_execution.py  test_fast_path.py  test_intent.py  test_orchestrator.py  test_safety.py  test_service.py  test_stt.py  test_tts.py  test_ui.py  test_wake_config.py  test_web_answers.py
