[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "J.A.R.I.V.S — fully local, offline voice assistant for Windows"
requires-python = ">=3.11"
# Runtime dependencies live in requirements.txt (staged per roadmap phase).

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jarvis = ["ui/static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
